src/test/deca/context/invalid/created/object/equals_boolean_boolean.deca
// Description :
//    test equals entre un boolean et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
boolean a;
boolean b;
int c = a.equal(b);
}
